--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">Yuravin Bung</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="https://www.linkedin.com/in/yuravinbung/">My Linkedin profile</a></li>
-        <li><a href="https://github.com/yuravinbung">My Github account</a></li>
+        <li><a href="">Mon offre de service</a></li>
+        <li><a class="dropdown-trigger" href="#" data-target="dropdown1">Liens externes</a>
+          <ul id="dropdown1" class="dropdown-content">
+            <li><a href="https://www.linkedin.com/in/yuravinbung/">My Linkedin profile</a></li>
+            <li><a href="https://github.com/yuravinbung">My Github account</a></li>
+          </ul>
+        </li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
@@ -49,12 +54,14 @@
   <div class="container">
     <div class="section">
 
+      <h4 class="center">Offre de service</h4>
+
       <!--   Icon Section   -->
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Customer oriented</h5>
+            <h5 class="center">Gestion de projet</h5>
 
             <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
           </div>
@@ -63,7 +70,7 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+            <h5 class="center">Scrum Master</h5>
 
             <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
           </div>
@@ -72,7 +79,7 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            <h5 class="center">Développeur</h5>
 
             <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
           </div>
